opam-version: "2.0"
name: "timer"
synopsis: "Timer library"
description: "Timer library"
maintainer: "Stephane Graham-Lengrand <stephane.graham-lengrand@csl.sri.com>"
authors: "Stephane Graham-Lengrand <stephane.graham-lengrand@csl.sri.com>"
license: "GPL3"
homepage: "https://github.com/disteph/timer"
bug-reports: "https://github.com/disteph/timer/issues"
depends: [
  "ocaml"
  "dune"
  "ocamlfind"
]
build: [
    "dune" "build"
]
install: [
  "dune" "install"
]
remove: [
  "ocamlfind" "remove" "timer"
]
