opam-version: "2.0"
name: "timers"
synopsis: "Timers library"
description: "Timers library"
maintainer: "Stephane Graham-Lengrand <stephane.graham-lengrand@csl.sri.com>"
authors: "Stephane Graham-Lengrand <stephane.graham-lengrand@csl.sri.com>"
# license: "none yet"
# homepage: "none yet"
# bug-reports: "no way"
depends: [
  "ocaml" {>= "4.11" & < "4.12"}
  "dune"
  "ocamlfind"
  "containers"
]
build: [
    "dune" "build"
]
install: [
  "dune" "install"
]
remove: [
  "ocamlfind" "remove" "timer"
]
